# time-river

./: .gitignore  Anchor.toml  Cargo.toml  HACKATHON_SETUP.md  PROJECT_WHITEPAPER_v2.1.md  README.md  build_anchor.sh  package-lock.json  package.json
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/public/idl/: time_river.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/ai/chat/: route.ts
frontend/src/app/api/records/: route.ts
frontend/src/app/destiny/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/records/: page.tsx
frontend/src/components/common/: NavBar.tsx  WalletProviders.tsx
frontend/src/components/destiny/: BaziChart.tsx  DestinyReportView.tsx  MajorCycleTimeline.tsx
frontend/src/components/energy/: EnergyReport.tsx
frontend/src/components/inspiration/: InspirationZone.tsx
frontend/src/components/pulse/: DestinyPulse.tsx
frontend/src/components/records/: RecordCard.tsx  RecordDetailModal.tsx
frontend/src/components/river/: MemoryBubble.tsx  RecordModal.tsx  TimeRiver.tsx
frontend/src/lib/ai/: claude.ts
frontend/src/lib/astro/: engine.ts
frontend/src/lib/bazi/: engine.ts
frontend/src/lib/crypto/: encryption.ts
frontend/src/lib/i18n/: index.tsx
frontend/src/lib/solana/: program.ts
frontend/src/lib/storage/: irys.ts
frontend/src/types/: index.ts  lunar-javascript.d.ts
frontend/supabase/: schema.sql
programs/time_river/: Cargo.toml
programs/time_river/src/: lib.rs
(+7 files in other folders)
