[package]
name = "time_river"
version = "0.1.0"
description = "Time River — Solana On-Chain Memory Proof Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "time_river"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = "4.1.2"

[dev-dependencies]
anchor-client = "0.30.1"
